Sportshall/altFrontend/static/css/main.css
@charset "utf-8";
/* CSS Document */

html, body{
	font-family: "Lato", sans-serif;
	max-height: 100%;
	/**background: linear-gradient(to bottom right, #00ba7f, #c471ed, #f64f59);
	background-size: 400% 400%;
	-webkit-animation: backgroundRotation 0s ease infinite;
	-moz-animation: backgroundRotation 0s ease infinite;
	animation: backgroundRotation 8s ease infinite;**/
}

@-webkit-keyframes backgroundRotation {
	0%{background-position:65% 0%}
	50%{background-position:36% 100%}
	100%{background-position:65% 0%}
}
@-moz-keyframes backgroundRotation {
	0%{background-position:65% 0%}
	50%{background-position:36% 100%}
	100%{background-position:65% 0%}
}
@keyframes backgroundRotation {
	0%{background-position:65% 0%}
	50%{background-position:36% 100%}
	100%{background-position:65% 0%}
}

#main{
	height: 100%;
}

.sidenav {
	height: 100%;
	width: 0;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: #111;
	overflow-x: hidden;
	transition: 0.5s;
	padding-top: 60px;
}

.sidenav a {
	padding: 8px 8px 8px 32px;
	text-decoration: none;
	font-size: 25px;
	color: #818181;
	display: block;
	transition: 0.3s;
}

.sidenav a:hover {
	color: #f1f1f1;
}

.sidenav .closebtn {
	position: absolute;
	top: 0;
	right: 25px;
	font-size: 36px;
	margin-left: 50px;
}

#main {
	height:100%;
	transition: margin-left .5s;
	padding: 16px;
}

#container {
	margin-top: 20px;
	display:flex;
	width: 100%;
	max-height: 100%;
}

.column{
	margin-top: 15px;
	font-size: 1.2em;
	padding: 8px 40px;
	flex: 50%;
}

.column > p{
	margin-bottom: 28px;
}

@media screen and (max-height: 450px) {
	.sidenav {padding-top: 15px;}
	.sidenav a {font-size: 18px;}
}

/**form{
	background: none;
}**/

.name{
	transition: text-decoration 1s;
	transition: padding-left 0.4s;
}

.name:hover{
	padding-left: 8px;
	text-decoration: line-through;
	cursor: pointer;
}

#container2{
	display: flex;
	flex-direction: column;
}

.eventBlockContainer{
	display:flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.eventBlock{
	box-sizing: border-box;

	border: 4px solid black;
	padding: 8px;
	margin: 0 10px;
}

